# um_test

./: .example.env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  makefile  pyproject.toml
src/: config.py
src/application/: errors.py
src/application/enums/: base.py
src/application/schema/: score_model.py  user_model.py
src/infra/: loguru.py
src/infra/postgres/: __init__.py  gateways.py  schemas.py  tables.py  utils.py
src/infra/postgres/migrations/: env.py  script.py.mako
src/infra/postgres/migrations/versions/: 132c4a3e914f_fix_table.py  e547a9c87121_init.py
src/main/: __init__.py  __main__.py  di.py  telegram.py
src/presentation/aiogram/: widgets.py
src/presentation/aiogram/dialogs/: main_menu.py  scores.py  user_registration.py
src/presentation/aiogram/middleware/: check_user.py
src/presentation/aiogram/routes/: main.py
