[tool.poetry]
name = "umschool-test"
version = "0.1.0"
description = ""
authors = ["palas1k <liserg008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
sqlalchemy = "^2.0.34"
asyncpg = "^0.29.0"
dishka = "^1.3.0"
adaptix = "^3.0.0b8"
dynaconf = "^3.2.6"
loguru = "^0.7.2"
aiogram-dialog = "^2.1.0"
orjson = "^3.10.7"
redis = "^5.0.8"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
